se añade el correcto mquery en CSS para que la seccion Quienes somos quede oculta en la version mobile, modificando la anterior

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,9 +26,10 @@ img {
 
 @media (max-width: 768px) {
     #quienes_somos{
-      visibility: hidden;
+      display: none;
     }
   }
+  
 
 
 .icon_plane{
